# document-generator

./: .gitignore  Cargo.toml  README.MD
doc/: api.md  typing.d.ts
src/: main.rs
src/error/: mod.rs
src/generator/: mod.rs
src/generator/parser/: data_item.rs  data_source.rs  mod.rs  render_format.rs  result_item.rs
src/generator/renderer/: document.rs  mod.rs  paragraph.rs  replacement.rs  table.rs
src/generator/utils/: document.rs  http.rs  mod.rs
src/parser/: data_source.rs  result_item.rs
src/renderer/: document.rs  mod.rs
