[package]
name = "document-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
docx-rs = "0.4.17"
image = "0.25.1"
log = "0.4.22"
regex = "1.10.5"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1.19"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
url = "2.5.2"
zip = "2.1.3"
